Revert "Breaking API: Consistency with role id/label"
This reverts commit 9e5cf66be7ad897e106f283bee73a165c72e74de.
