# server/tools/shared/cli.ts
@@ -19,7 +19,7 @@ async function getAdminTokenOrDie (server: PeerTubeServer, username: string, pas
   const token = await server.login.getAccessToken(username, password)
   const me = await server.users.getMyInfo({ token })
 
-  if (me.role.id !== UserRole.ADMINISTRATOR) {
+  if (me.role !== UserRole.ADMINISTRATOR) {
     console.error('You must be an administrator.')
     process.exit(-1)
   }
