# support/doc/api/openapi.yaml
@@ -7806,16 +7806,13 @@ components:
         nsfwPolicy:
           $ref: '#/components/schemas/NSFWPolicy'
         role:
-          type: object
-          properties:
-            id:
-              $ref: '#/components/schemas/UserRole'
-            label:
-              type: string
-              enum:
-                - User
-                - Moderator
-                - Administrator
+          $ref: '#/components/schemas/UserRole'
+        roleLabel:
+          type: string
+          enum:
+            - User
+            - Moderator
+            - Administrator
         theme:
           type: string
           description: Theme enabled by this user
